# csv-stats-analyzer

./: .gitignore  README.md  pyproject.toml
program/config_templates/: config.yaml
program/models/: analyzer_config_models.py
program/processor/: output_exporter.py  processor.py  raw_data_manage_executor.py  stats_analyze_executor.py
program/test_suits/: global_test_config.py  sample_data_cpu.csv  sample_data_cpu_memory.csv  sample_data_mem.csv  test_suit_1.py
